--- a/app/src/main/res/layout/item_entry_manager_parent_adapter.xml
+++ b/app/src/main/res/layout/item_entry_manager_parent_adapter.xml
@@ -3,16 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_marginBottom="4dp"
     android:layout_height="30dp"
     android:layout_margin="8dp"
-    android:layout_gravity="center_horizontal"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/item_parent"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:background="@color/gray"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -50,8 +49,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_add"
+        android:layout_marginLeft="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/item_parent"
         app:layout_constraintTop_toTopOf="parent" />
 
