--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -52,9 +52,9 @@
     </fragment>
     <fragment
         android:id="@+id/manageEntriesFragment"
-        android:name="com.example.tcc.ManageEntriesFragment"
+        android:name="com.example.tcc.ManagerFragment"
         android:label="fragment_manage_entries"
-        tools:layout="@layout/fragment_manage_entries" >
+        tools:layout="@layout/fragment_manager" >
         <action
             android:id="@+id/action_manageEntriesFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
