--- a/app/src/main/res/layout/item_entry_parent.xml
+++ b/app/src/main/res/layout/item_entry_parent.xml
@@ -22,10 +22,9 @@
             android:id="@+id/parent_Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
             android:textSize="10sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.099"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.419" />
@@ -37,8 +36,6 @@
             android:src="@drawable/ic_drop_down"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.896"
-            app:layout_constraintStart_toEndOf="@+id/parent_Title"
             app:layout_constraintTop_toTopOf="parent" />
 
 
