--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:fillViewport="true"
-    tools:context=".RegisterFragment"
+    tools:context=".ui.auth.RegisterFragment"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
