--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -49,10 +49,6 @@
         <action
             android:id="@+id/action_homeFragment_to_manageEntriesFragment"
             app:destination="@id/manageEntriesFragment" />
-        <argument
-            android:name="user"
-            app:argType="string"
-            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/manageEntriesFragment"
@@ -65,5 +61,17 @@
         <action
             android:id="@+id/action_manageEntriesFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_manageEntriesFragment_to_areaManagerFragment"
+            app:destination="@id/areaManagerFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/areaManagerFragment"
+        android:name="com.example.tcc.ui.AreaManagerFragment"
+        android:label="fragment_area_manager"
+        tools:layout="@layout/fragment_area_manager" >
+        <argument
+            android:name="propertyId"
+            app:argType="string" />
     </fragment>
 </navigation>
