--- a/app/src/main/res/layout/fragment_add_property_dialog.xml
+++ b/app/src/main/res/layout/fragment_add_property_dialog.xml
@@ -27,7 +27,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        android:padding="16dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -82,27 +81,29 @@
             app:layout_constraintTop_toBottomOf="@+id/edit_name" />
 
         <TextView
-            android:id="@+id/text_crop"
+            android:id="@+id/text_localization"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:foregroundGravity="center"
             android:gravity="center"
             android:paddingLeft="8dp"
-            android:text="Cultura:"
+            android:text="Localização:"
             android:textColor="@color/black"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_area" />
 
-        <Spinner
-            android:id="@+id/spinner_crop"
+        <EditText
+            android:id="@+id/edit_localization"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="8dp"
             android:hint="Localização da propriedade"
             android:textSize="12sp"
-            app:layout_constraintStart_toEndOf="@+id/text_crop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_localization"
             app:layout_constraintTop_toBottomOf="@+id/edit_area" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
