--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -47,23 +47,8 @@
             android:id="@+id/action_homeFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
         <action
-            android:id="@+id/action_homeFragment_to_manageEntriesFragment"
-            app:destination="@id/manageEntriesFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/manageEntriesFragment"
-        android:name="com.example.tcc.ui.ManagerFragment"
-        android:label="fragment_manage_entries"
-        tools:layout="@layout/fragment_manager" >
-        <action
-            android:id="@+id/action_manageEntriesFragment_to_loginFragment"
-            app:destination="@id/loginFragment" />
-        <action
-            android:id="@+id/action_manageEntriesFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-        <action
-            android:id="@+id/action_manageEntriesFragment_to_areaManagerFragment"
-            app:destination="@id/areaManagerFragment" />
+            android:id="@+id/action_homeFragment_to_managerFragment"
+            app:destination="@id/managerFragment" />
     </fragment>
     <fragment
         android:id="@+id/areaManagerFragment"
@@ -72,9 +57,28 @@
         tools:layout="@layout/fragment_area_manager" >
         <argument
             android:name="propId"
-            app:argType="string" />
+            app:argType="string"
+            app:nullable="true" />
         <action
-            android:id="@+id/action_areaManagerFragment_to_manageEntriesFragment"
-            app:destination="@id/manageEntriesFragment" />
+            android:id="@+id/action_areaManagerFragment_to_managerFragment"
+            app:destination="@id/managerFragment" />
+        <action
+            android:id="@+id/action_areaManagerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/managerFragment"
+        android:name="com.example.tcc.ui.ManagerFragment"
+        android:label="fragment_manager"
+        tools:layout="@layout/fragment_manager" >
+        <action
+            android:id="@+id/action_managerFragment_to_areaManagerFragment"
+            app:destination="@id/areaManagerFragment" />
+        <action
+            android:id="@+id/action_managerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
+        <action
+            android:id="@+id/action_managerFragment_to_homeFragment"
+            app:destination="@id/homeFragment" />
     </fragment>
 </navigation>
