--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -95,5 +95,8 @@
         <argument
             android:name="areaId"
             app:argType="string" />
+        <action
+            android:id="@+id/action_vintageManagerFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
 </navigation>
