--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,4 +24,8 @@
     <style name="bottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
         <item name="android:background">@android:color/transparent</item>
     </style>
+    
+    <style name="datePickerTheme" parent="android:Theme.Material.Dialog">
+        <item name="android:colorAccent">@color/green_leaf</item>
+    </style>
 </resources>
