--- a/app/src/main/res/layout/item_entry_child.xml
+++ b/app/src/main/res/layout/item_entry_child.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     tools:context=".ui.adapter.EntryManageEntriesAdapter"
-    android:layout_margin="4dp"
+    android:layout_margin="1dp"
     android:layout_gravity="center_horizontal">
 
 <!--    <TextView-->
@@ -26,7 +26,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/entry_child"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,6 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
+            android:textSize="10dp"
             android:text="Descrição:"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -50,6 +51,7 @@
             android:id="@+id/text_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintStart_toEndOf="@+id/text_show_descripion"
@@ -59,6 +61,7 @@
             android:id="@+id/text_show_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
             android:padding="4dp"
             android:text="Quantidade:"
             android:textStyle="bold"
@@ -69,6 +72,7 @@
             android:id="@+id/text_quantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintStart_toEndOf="@+id/text_show_quantity"
@@ -78,6 +82,7 @@
             android:id="@+id/text_unity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
@@ -90,6 +95,7 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:layout_marginStart="8dp"
+            android:textSize="10dp"
             android:text="Preço:"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -100,6 +106,7 @@
             android:id="@+id/text_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
@@ -111,6 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
+            android:textSize="10dp"
             android:layout_marginStart="8dp"
             android:text="Total/Há:"
             android:textStyle="bold"
@@ -122,6 +130,7 @@
             android:id="@+id/text_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="10dp"
             android:padding="4dp"
             android:text=""
             app:layout_constraintBottom_toBottomOf="parent"
